2006-10-01  Mitz Pettel  <opendarwin.org@mitzpettel.com>

Reviewed by Darin.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=10190
        REGRESSION: Repro crash when navigating away from an image document that hasn't finished loading

        No test case added (probably requires new DumpRenderTree functionality)

        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::imageChanged): Added early return if the document is
        being destroyed.



git-svn-id: svn://svn.chromium.org/blink/trunk@16697 bbb929c8-8fbe-4397-9dbb-9b2b20218538