third_party/WebKit/WebCore/rendering/RenderImage.cpp
@@ -97,6 +97,9 @@ void RenderImage::setCachedImage(CachedImage* newImage)
 
 void RenderImage::imageChanged(CachedImage* o)
 {
+    if (documentBeingDestroyed())
+        return;
+
     if (o != m_cachedImage) {
         RenderReplaced::imageChanged(o);
         return;
